# Stock_Market_Simulator

./: CMakeLists.txt
src/: CSVImporter.cpp  CSVImporter.hpp  DataAnalyzer.cpp  DataAnalyzer.hpp  DataImporter.cpp  DataImporter.hpp  DataValidator.cpp  DataValidator.hpp  IDataImporter.hpp  LimitOrder.hpp  MarketOrder.hpp  Order.hpp  OrderBook.cpp  OrderBook.hpp  Portfolio.cpp  Portfolio.hpp  StatisticalProcessor.cpp  StatisticalProcessor.hpp  StockData.hpp  TechnicalIndicator.hpp  Trade.hpp  Trader.cpp  Trader.hpp  TransactionSimulation.hpp  UserInterface.cpp  UserInterface.hpp  main.cpp
test/: CMakeLists.txt  test1.cpp  test2.cpp  test3.cpp
